--- a/Desktop/Basic/Form/FormDashboard.resx
+++ b/Desktop/Basic/Form/FormDashboard.resx
@@ -312,6 +312,23 @@
         n0R/KPq3LkymX4yScf7AeOttAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="pictureBox16.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAApBJREFUSEvVlE1o02AYxzvPsjE/WD8mRe3Bg178AIVdlabTgzdFBCsiMrxq42T2
+        MMFehOFw6hC8jIEbIgp+bGtSNnRU1uqEsX5sczOzBdvZho10rk2fxydZKq4ruqy5+IffIcn7vL8870Ni
+        +lcmgd0eAc+1KHhGiGzrFzdYOGbRzDPvbRxzwzHi3Kkt3VxiyF6OIitGgYUYsGMku98662638EwXEWrg
+        GDD7maXGAHNVK9EXEvgIpLcfisD1A8o9RKzxfm/ZakLvFuV6T6B5v5l3DZIMrZyrQ7mnK7R5Zxw8t720
+        YQTZQ3T9jLpZpE6wgXNK1MkLe8B51ISmGhvPtFt5V7dWqj90RBdj4CmQJEWSrpuzbtbCuR7Q26dIJlsD
+        zBVt6eZD87hHc+kLoaduClgHdXLaHji5zxF01lI3T60c80hbWn1I5qVuYPW4GLD6mTvaI+OizIhEHW3C
+        hSPKkKuaQaWIImxLS2BVEBbA9nkeGhU+xqG6b0TJgiQ1piV5OJ2TscT0QhHDAv4mJMBoOAl2rUR/ygWV
+        JCpfIaiV6IugHFGZYGwmhbtOXML+4el1og+zaNZKNx51Bn8IXodn8LjnMdYeO4sHm8/jw+fBNZLxOdit
+        lW485ZK+dxE83NKpSvY2ncK7PX7jJQqjsSTWN53DXv/kGoGhEoWJxPI6gSGSH8sySvmiSkQCfCMiviWC
+        SQMlS7R5KePEE1hlIPu/SSaWCvhKzKv4UjKeSRRVur+BcZLBzAqy8zkVV2wFLZ9klba4gZKhTL6i5Fa1
+        kgxiXUoqgCIRJBkD2TzyRE9CRt8UqPBzpZkARBO4QyvVl1ROflnqpkTFH6QAA1qJ/ogi1qelQi+RqyyB
+        n0R/KPq3LkymX4yScf7AeOttAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="pictureBox11.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAYAAAByDd+UAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
